自由的进行移动，在onTouchEvent里面，加上移动的代码，必须图片显示的长或宽大于屏幕才可以移动

--- a/Gesture/app/src/main/res/layout/activity_main.xml
+++ b/Gesture/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
 
 
     <com.oztaking.www.gesture.zoomImage
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="matrix"
         android:src="@drawable/xx">
     </com.oztaking.www.gesture.zoomImage>
