--- a/Gesture/app/src/main/res/layout/activity_main.xml
+++ b/Gesture/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,21 +8,18 @@
     android:layout_height="match_parent"
     tools:context="com.oztaking.www.gesture.MainActivity">
 
-    <!--<com.oztaking.www.gesture.zoomImage-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:scaleType="matrix"-->
-        <!--android:src="@drawable/ttt"-->
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_iamge"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <!--&gt;-->
+    </android.support.v4.view.ViewPager>
+
+    <!--<com.oztaking.www.gesture.zoomImage-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:scaleType="matrix"-->
+        <!--android:src="@drawable/xx">-->
     <!--</com.oztaking.www.gesture.zoomImage>-->
 
-
-    <com.oztaking.www.gesture.zoomImage
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="matrix"
-        android:src="@drawable/xx">
-    </com.oztaking.www.gesture.zoomImage>
-
-</LinearLayout>
+</RelativeLayout>
